...
        description={module.description}
        android={!module.platform || module.platform === 'android'}
        ios={!module.platform || module.platform === 'ios'}
        documentationURL={module.documentationURL}
        category={module.category}>
          <RNTesterExampleFilter
            testID="example_search"
            page="examples_page"
            hideFilterPills={true}
            sections={sections}
            filter={filter}
            render={({filteredSections}) =>
              filteredSections[0].data.map(this.renderExample)
...
