...
  Animated,
  AppState,
  AppStateStatus,
  Appearance,
  BackHandler,
  BlurEvent,
  Button,
  ColorValue,
  DevSettings,
  DeviceEventEmitter,
  Dimensions,
  DrawerLayoutAndroid,
  DrawerSlideEvent,
...
    {
      text: 'Cancel',
      onPress: () => console.log('Cancel Pressed'),
      style: 'cancel',
    },
    {
      text: 'OK',
      isPreferred: true,
      onPress: (password?: string) =>
        console.log('OK Pressed, password: ' + password),
    },
  ],
  'secure-text',
...
