appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- stopApp
- openLink: rntester://example/Modal/onShow
- runFlow: ./helpers/confirm-open-link.yml
- extendedWaitUntil:
    visible:
      id: 'open-modal'
    timeout: 120000
- tapOn:
    id: 'open-modal'
- assertVisible:
    id: 'dismiss-modal'
- assertVisible:
    id: 'modal-on-show-count'
    text: 'onShow is called 1 times'
- tapOn:
    id: 'dismiss-modal'
- assertNotVisible:
    id: 'dismiss-modal'
- assertVisible:
    id: 'on-show-count'
    text: 'onShow is called 1 times'
